:bug: fix header not align right

--- a/client/src/app/home/home.page.scss
+++ b/client/src/app/home/home.page.scss
@@ -1,5 +1,4 @@
 .menuWeb {
-  width: 1512px;
   height: 120px;
   display: flex;
 }
@@ -14,7 +13,6 @@
 
 .menuWeb img.background {
   width: 54.5em;
-  margin-right: 300px;
 }
 
 .menuHandsetPortrait img.iconeMenu {
@@ -154,3 +152,8 @@ a {
   transform: scale(1.2);
   transition: 1s ease;
   }
+
+.menuText {
+  display: flex;
+  margin-left: auto;
+}
